# qbittorrent-client

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  models.rs
