[package]
name = "qbittorrent-client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "qBittorrent webAPI wrapper library"
repository = "https://github.com/doroshtapgh/qbittorrent-client"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["cookies", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["sync"] }
url = "2.5.1"
